# Solana-Monorepo

./: README.md
DAO-Implementation/: Anchor.toml  README.md
DAO-Implementation/programs/sol-sec/: Cargo.toml
DAO-Implementation/programs/sol-sec/src/: lib.rs
DAO-Implementation/tests/: sol-sec.ts
SolSec-Backend/: app.js  example.env  package-lock.json  package.json  server.js
SolSec-Backend/Controller/: auditorController.js  authController.js  contestController.js  judgeController.js
SolSec-Backend/Model/: auditorModel.js  contestModel.js  judgeModel.js  sessionModel.js  userModel.js
SolSec-Backend/Routes/: auditorRoute.js  authRoute.js  contestRoute.js  judgeRoutes.js
SolSec-Backend/utils/: appError.js
SolSec-Frontend/: README.md  package-lock.json  package.json
SolSec-Frontend/public/: index.html
SolSec-Frontend/src/: App.js
SolSec-Frontend/src/Components/Compete/: Compete.css  Compete.jsx
SolSec-Frontend/src/Components/Competitions/: Competitions.css  Competitions.jsx
SolSec-Frontend/src/Components/ContestPage/: Contest.jsx  Contests.jsx  CreateContest.jsx
SolSec-Frontend/src/Components/Forms/: FindingForm.css  FindingForm.js  Judging.css  Judging.js  Login.js  Login.module.css  Proposal.js  Proposal.module.css  Signup.js
SolSec-Frontend/src/Components/InputBox/: InputBox.module.css
SolSec-Frontend/src/Components/LandingPage/: LandingPage.css  LandingPage.jsx
SolSec-Frontend/src/Components/Modal/: Modal.js  Modal.module.css
SolSec-Frontend/src/https/: api.js
SolSec-Frontend/src/store/: authSlice.js  store.js
(+17 files in other folders)
